--- a/Frontend/scr/user/user.css
+++ b/Frontend/scr/user/user.css
@@ -57,6 +57,8 @@ button{
     color: white;
     border-radius: 5px;
     cursor: pointer;
+    margin-top: 10px;
+    width: 100px;
 }
 
 button:hover{
